<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_day"
            android:icon="@drawable/ic_work"
            android:title="@string/day" />
        <item
            android:id="@+id/nav_month"
            android:icon="@drawable/ic_work"
            android:title="@string/month" />
        <item
            android:id="@+id/nav_done_tasks"
            android:icon="@drawable/ic_done_tasks"
            android:title="@string/done_tasks" />
        <item
            android:id="@+id/nav_later_tasks"
            android:icon="@drawable/ic_done_tasks"
            android:title="@string/later_tasks" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting" />

        </menu>
    </item>

</menu>
