<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/changeLanguage"
        android:text="@string/change_language"
        android:textSize="17sp"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:drawableLeft="@drawable/ic_language_black_24dp"
        android:drawablePadding="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/changeTheme"
        android:text="@string/change_theme"
        android:paddingLeft="20dp"
        android:textSize="17sp"
        android:drawableLeft="@drawable/ic_change_theme_black_24dp"
        android:paddingTop="20dp"
        android:drawablePadding="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/rateApp"
        android:text="@string/rate_application"
        android:textSize="17sp"
        android:paddingLeft="20dp"
        android:drawableLeft="@drawable/ic_star_black_24dp"
        android:paddingTop="20dp"
        android:drawablePadding="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>